testdata/baselines/reference/submodule/conformance/tsxStatelessFunctionComponentOverload3.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(4,41): error TS2503: Cannot find namespace 'JSX'.
file.tsx(5,87): error TS2503: Cannot find namespace 'JSX'.
file.tsx(16,47): error TS2503: Cannot find namespace 'JSX'.
file.tsx(17,47): error TS2503: Cannot find namespace 'JSX'.
file.tsx(18,92): error TS2503: Cannot find namespace 'JSX'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (5 errors) ====
    interface Context {
        color: any;
    }
    declare function ZeroThingOrTwoThing(): JSX.Element;
                                            ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    declare function ZeroThingOrTwoThing(l: {yy: number, yy1: string}, context: Context): JSX.Element;
                                                                                          ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    
    let obj2: any;
    
    // OK
    const two1 = <ZeroThingOrTwoThing />;
    const two2 = <ZeroThingOrTwoThing yy={100}  yy1="hello"/>;
    const two3 = <ZeroThingOrTwoThing {...obj2} />;  // it is just any so we allow it to pass through
    const two4 = <ZeroThingOrTwoThing  yy={1000} {...obj2} />;  // it is just any so we allow it to pass through
    const two5 = <ZeroThingOrTwoThing  {...obj2} yy={1000} />;  // it is just any so we allow it to pass through
    
    declare function ThreeThing(l: {y1: string}): JSX.Element;
                                                  ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    declare function ThreeThing(l: {y2: string}): JSX.Element;
                                                  ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    declare function ThreeThing(l: {yy: number, yy1: string}, context: Context, updater: any): JSX.Element;
                                                                                               ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    
    // OK
    const three1 = <ThreeThing yy={99} yy1="hello world" />;
    const three2 = <ThreeThing y2="Bye" />;
    const three3 = <ThreeThing {...obj2} y2={10} />;  // it is just any so we allow it to pass through